--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "node-sass sass/style.scss css/style.css -w",
     "compress": "node-sass css/style.css css/compile.css --output-style compressed",
     "babel": "babel js/script.js --watch --out-dir dist",
-    "prefix": "postcss --use autoprefixer -b \"last 10 versions\" css/style.css -o css/style.prefix.css"
+    "prefix": "postcss --use autoprefixer -b \"last 10 versions\" css/style.css -o css/style.prefix.css",
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --out-dir production"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "autoprefixer": "^10.3.4",
-    "postcss-cli": "^8.3.1"
+    "postcss-cli": "^8.3.1",
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.5"
   }
 }
