--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "autoprefixer": "^10.3.4",
-    "postcss-cli": "^8.3.1",
     "parcel": "^1.12.4",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-purgecss": "^3.0.0",
+    "postcss-cli": "^8.3.1"
   }
 }
